--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name       : qt5-tools
 version    : 5.15.3
-release    : 24
+release    : 25
 source     :
     - git|https://invent.kde.org/qt/qt/qttools.git : 33693a928986006d79c1ee743733cde5966ac402
 homepage   : https://www.qt.io
@@ -18,6 +18,7 @@ description: |
 builddeps  :
     - pkgconfig(libxslt)
     - pkgconfig(Qt5Qml)
+    - llvm-clang-devel
     - vulkan-headers
 patterns   :
     - demos : /usr/lib64/qt5/examples
